# wagtail-sandbox

./: README.md  pyproject.toml
src/: db-home-page.sqlite3  db-localize.sqlite3
src/pages/: blocks.py  models.py
src/pages/migrations/: 0001_initial.py  0002_homepage_body.py
src/project/: settings.py  urls.py
src/snippets/: models.py
src/snippets/migrations/: 0001_initial.py  0002_advert_locale_advert_translation_key_and_more.py
src/templates/: base.html
src/templates/blocks/: carousel.html  gallery.html  person.html
src/templates/pages/: home_page.html
