[tool.poetry]
name = "wagtail-tutorial"
version = "0.1.0"
description = ""
authors = ["Victor <victor.movileanu@check24.de>"]
readme = "README.md"
packages = [{include = "wagtail_tutorial"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
wagtail = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
